samples/_failures_safe/1761447392_96dcba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e977fc79.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_e977fc79.c:159:17: error: expected declaration or statement at end of input
  159 |                 return 0;
      |                 ^~~~~~
./samples/SAFE/__tmp_e977fc79.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e977fc79.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e977fc79.c:159:17: error: expected declaration or statement at end of input
